--- a/journal/202006.md
+++ b/journal/202006.md
@@ -219,11 +219,6 @@ To get notified when new proposals are published or go to vote you can follow [@
 
 ## Network
 
-{ hint:
-
-- check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
-}
-
 Hashrate: [June's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kavllavw-kc326nyn&scale=linear&bin=block&axis=time) opened at ~390 Ph/s and closed ~412 Ph/s, bottoming at 280 Ph/s and peaking at 569 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of Jul 1 (approximate): UUPool 36%, Poolin 32%, lab.antpool.com 11%, BTC.com 3.4%, Luxor 1.07%, F2Pool 0.86%, BeePool 0.09%, CoinMine 0.04%, Suprnova 0.02% and others ~15%.
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 139.4 DCR (-2.1). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kavllavw-kc326nyn&axis=time&visibility=true-false&mode=stepped) varied between 135.1-149.8 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kavllavw-kc326nyn&scale=linear&bin=block&axis=time) was 5.63-5.86 million DCR, which corresponded to 48.7-50.6% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kavllavw-kc326nyn&scale=linear&bin=block&axis=time) in PoS.
@@ -232,24 +227,18 @@ An unusual spike of block size usage (unrelated to large Treasury payout transac
 
 Nodes: Throughout [June](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1590969600000&to=1593561600000) there was an average of 126 public listening nodes and 208 total nodes per dcr.farm. Average version distribution for June: 50% dcrd v1.5.1, 9.5% dcrd v1.5.0, 5.6% dcrd v1.6.0 dev builds, 3.2% dcrd v1.5.0 dev builds, 1.8% dcrd v1.4.0, 9.5% dcrwallet v1.5.1, 1% dcrwallet v1.5.0, 0.9% dcrwallet v1.4.0, and 18.7% others.
 
-{any interesting analysis or events in the network}
+@Checkmate posted a [chart](https://twitter.com/_Checkmatey_/status/1269825167133306881) that shows an increase in on-chain DCR volume.
 
-- onchain vol uptick https://twitter.com/_Checkmatey_/status/1269825167133306881
-- https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182 { highlights pls }
+@PermabullNino [tweeted](https://twitter.com/PermabullNino/status/1278055245050855424) updated Mining Pulse, Difficulty Ribbons, ticket inflows and Strong Hand charts. A bit earlier he [shared](https://twitter.com/PermabullNino/status/1272512290814902275) the Staking Momentum chart.
 
-@richardred published [part 1](https://blockcommons.red/post/dcr-on-chain-1/) in a series about analysing Decred's blockchain data, highlights including:
+@richardred published [part 1](https://blockcommons.red/post/dcr-on-chain-1/) in a series about analyzing Decred's blockchain data, highlights including:
 
 - 465K of the 840K [founders premine](https://docs.decred.org/advanced/premine/#bring-up-costs) remains untouched
 - 290K of the 840K [airdrop](https://docs.decred.org/advanced/premine/#airdrop) coins did not move as well
 - ~27% of the 345K DCR paid by the Treasury to contractors was not touched since the contractor received it, ~24% was staked, ~24% ended up in a known exchange address, ~1.7% was mixed
-- out of ~5.8M DCR PoW rewards, 60% ended up on addresses associated with exchanges, 10% has been staked, and the rest is unspent (6%) or has unknown outcome (24%). 
+- out of ~5.8M DCR PoW rewards, 60% ended up on addresses associated with exchanges, 10% has been staked, and the rest is unspent (6%) or has unknown outcome (24%)
 
-The same kind of analysis was repeated with fresh data and formatting improvements for [Issue 27](https://ournetwork.substack.com/p/our-network-issue-27) of Our Network.
-
-- https://twitter.com/PermabullNino/status/1278055245050855424
-- https://twitter.com/PermabullNino/status/1272510826210000896
-  - ticket pool inflows/outflows, Strong Hand ratio, staking momentum
-- 
+The same kind of analysis was repeated with fresh data and formatting improvements for [issue 27](https://ournetwork.substack.com/p/our-network-issue-27) of Our Network newsletter.
 
 ## Integrations
 
@@ -395,6 +384,10 @@ Selected Twitter discussions:
 In June DCR was trading between USD 14.01-18.76 / BTC 0.0015-0.0019. The average daily rate was $16.05.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+
+In his latest [post](https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182) @Checkmate analyzed how realized cap, MVRV ratio and gradient oscillators apply to Decred. Realized cap tends to act as support or resistance level for both Decred and Bitcoin, but for Decred it is more accurate because coins are repriced much more often.
+
+> The Decred realised cap captures an important psychological level in that it represents the aggregate price where the market last interacted with their coins, capturing a sort of ‘recency bias’. People who regularly interact with their DCR holdings via tickets, CoinShuffle++ mixes or governance votes are likely to have heightened awareness of coin price. Therefore, the opportunity cost of realising profits or losses on their DCR is baked into each transaction. The explicit decision to buy a ticket over sending coins to an exchange for sale is a reflection of meaningfully bullish sentiment for each individual, and vice-versa.
 
 - testing realized cap https://twitter.com/PermabullNino/status/1268181399879790592
 - correlation between ticket inflows/outflows and price https://twitter.com/PermabullNino/status/1268270041759432704
