--- a/journal/202006.md
+++ b/journal/202006.md
@@ -261,24 +261,18 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 - https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/
 - https://twitter.com/hashtag/DidYouKnowDecred
 
-{ PR work? listing just in case }
+Monde PR's achievements for June:
 
-- https://cointelegraph.com/news/bitcoin-still-faces-on-chain-scaling-trouble-ahead-decred-co-founder-says
-- https://cointelegraph.com/news/decred-co-founder-cbdcs-can-facilitate-crony-capitalism
-- https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination
-
-Monde PR’s achievements for June:
-
-- Created and pitched two story ideas to finance, entrepreneur and tech publications
-- Secured two email Q&As with crypto publications
+- created and pitched two story ideas to finance, entrepreneur and tech publications
+- secured two email Q&As with crypto publications
 
 News coverage secured by Monde PR:
 
-- An article in [Cointelegraph](https://cointelegraph.com/news/bitcoin-still-faces-on-chain-scaling-trouble-ahead-decred-co-founder-says) featuring commentary by @jy-p on Bitcoin scaling, syndicated to eight news outlets.
-- An article in [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-cbdcs-can-facilitate-crony-capitalism) featuring commentary by @jy-p on the emergence of CBDCs, syndicated to seven news outlets.
-- An article in [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) featuring commentary by @jy-p on rumors of PayPal accepting cryptocurrencies, syndicated to 19 news outlets. It was also included as a top story in Holder’s Digest in [Cointelegraph](https://cointelegraph.com/news/paypal-crypto-rumors-rip-wirecard-telegram-settles-hodlers-digest-june-2228), syndicated to five news outlets.
+- an article in [Cointelegraph](https://cointelegraph.com/news/bitcoin-still-faces-on-chain-scaling-trouble-ahead-decred-co-founder-says) featuring commentary by @jy-p on Bitcoin scaling, syndicated to 8 news outlets
+- an article in [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-cbdcs-can-facilitate-crony-capitalism) featuring commentary by @jy-p on the emergence of CBDCs, syndicated to 7 news outlets
+- an article in [Cointelegraph](https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination) featuring commentary by @jy-p on rumors of PayPal accepting cryptocurrencies, syndicated to 19 news outlets. It was also included as a top story in Holder's Digest in [Cointelegraph](https://cointelegraph.com/news/paypal-crypto-rumors-rip-wirecard-telegram-settles-hodlers-digest-june-2228), syndicated to 5 news outlets
 
-A spreadsheet of all media coverage secured by Monde PR since February was [published](https://github.com/decredcommunity/pr/blob/release/monde-pr-media-coverage.csv) in the decredcommunity/pr repository.
+A spreadsheet of all media coverage secured by Monde PR since February 2020 was [published](https://github.com/decredcommunity/pr/blob/release/monde-pr-media-coverage.csv) in the decredcommunity/pr repository.
 
 ## Events
 
