--- a/journal/202006.md
+++ b/journal/202006.md
@@ -278,13 +278,14 @@ A spreadsheet of all media coverage secured by Monde PR since February 2020 was 
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Jun 11 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/271159615/) - Internet. Organized by @DecredAustralia, this was a second installment of @Checkmate's on-chain analysis for BTC and DCR. ([video](https://www.youtube.com/watch?v=HbquQIv9EYw))
+- Jun 25 - [Criptotips con Lorena](https://twitter.com/bitcoinemb/status/1276289966440681473) - Internet. @elian talked about crypto scams in this event hosted by Bitcoin Embassy Bar (Mexico City). ([video](https://www.youtube.com/watch?v=Bxdxzs6Bgpw))
+- Jun 25 - [Hablemos Decred 6](https://twitter.com/Decred_ES/status/1275164449448607748) - Internet. @pablito gave an introduction into Git and GitHub in Spanish as part of the strategy to create developer-oriented content by the Latam team. ([video](https://www.youtube.com/watch?v=4b0xYYk6xlY))
+- Jun 30 - [Decred Webinar](https://www.meetup.com/BlockchainMelbourne/events/271516517/) - Internet. @eSizeDave, @richardred, @elian, @mrbulb and @degeri discussed "Sociology, The Future of Work and Incentive Alignment" together with Ellie Rennie and Dr Julian Waters-Lynch from RMIT University. Organized by Decred Australia. ([video](https://www.youtube.com/watch?v=1dcHwap7xHQ))
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- { link Campus Party if releasing before 11th }
 
 ## Media
 
