--- a/journal/202006.md
+++ b/journal/202006.md
@@ -301,8 +301,11 @@ Selected articles:
 
 Translations:
 
-- A good amount of new translations from Decred Latam added to [Decred Spanish](https://medium.com/decred-es) Medium: A More Private Way to Stake and a full month of [Decred Drive](https://medium.com/decred-es/decred-drive-spanish/home) by @francov\_, and new [Politeia Digest](https://medium.com/decred-es/politeia-digest-spanish/home) by @pablito.
-- @ivandecredfan translated 5 articles to Russian in his [Medium](https://medium.com/@ivandecredfan) blog
+- A More Private Way to Stake - [in Arabic](https://insaf01.github.io/decred-arabic/articles/a-more-private-way-to-stake.html) by @arij and [in Spanish](https://medium.com/decred-es/una-forma-m%C3%A1s-privada-de-hacer-staking-en-dcr-36785ad54a47) by @francov\_.
+- [Decred Spanish](https://medium.com/decred-es) Medium gained a full month of [Decred Drive](https://medium.com/decred-es/decred-drive-spanish/home) by @francov\_ and a new [Politeia Digest](https://medium.com/decred-es/politeia-digest-spanish/home) issue by @pablito.
+- @ivandecredfan translated 5 articles to Russian in his [Medium](https://medium.com/@ivandecredfan) blog.
+- Decred full node & Tor setup tutorial on the Raspberry Pi \[2020\] transcript - [in Chinese](https://github.com/DominicTing/decred-ZH-translations/blob/master/%E6%A0%91%E8%8E%93%E6%B4%BE%E8%BE%85%E5%8A%A9%E5%AE%89%E8%A3%85%E8%84%9A%E6%9C%AC.md) by @Dominic.
+- Decred Journal May 2020 was translated to Arabic (@arij), Chinese (@Dominic), and Spanish (@francov\_). Thank you everyone for [translating](https://xaur.github.io/decred-news/) DJ for so many months!
 
 Videos:
 
@@ -313,6 +316,7 @@ Videos:
 - Decred bi-Weekly News Update - June 23rd, 2020 ([youtube](https://www.youtube.com/watch?v=4GqdgsgUX7c))
 - Decred was mentioned in the Good Morning Crypto show by Ivan on Tech ([youtube](https://www.youtube.com/watch?v=JZhl2Atm4VI&t=42m50s), at 42:50). The video has 24K views. Thanks to Steve de boo for dropping the question in the livestream chat - a good example of high-precision outreach work! { move this comment to Outreach? }
 - { check Decred Society channel }
+- Decred full node & Tor setup tutorial on the Raspberry Pi \[2020\] by @Exitus ([youtube](https://www.youtube.com/watch?v=B-5O_GBcbV0))
 - Decred Australia Virtual Meetup #2 Feat. On-Chain Analyst Checkmate https://www.youtube.com/watch?v=HbquQIv9EYw
 
 > The only thing holding Decred back in my honest opinion is more people coming up with creative ways to shout about it. It is all this thing needs. Because once you get the level of attention, the fundamentals just speak for themselves.
