--- a/journal/202006.md
+++ b/journal/202006.md
@@ -329,14 +329,9 @@ Audio:
 - Rough Consensus 8 - Talking macro with Ammar ([libsyn](https://roughconsensus.libsyn.com/episode-8-talking-macro-with-ammar)) - Ammar joins the spidey squad to discuss inflation, deflation, crypto bull theses, investing, and the strings that tie all of these pieces together
 - Zach Segal (Head of Listings at Coinbase) mentioned Decred as an interesting project in Trading Places podcast ([spotify](https://open.spotify.com/episode/7BkEEDgSDPU1XQsmveksgv), short [clip](https://www.youtube.com/watch?v=IDGQsWE3eeg), _missed in May_)
 
-@AGNFAB [announced](https://twitter.com/AGNFAB1/status/1271157067097792514) that some of his artwork will be exclusively available on [decentralizedboutique.com](https://decentralizedboutique.com/?product_cat=art), a new store selling crypto related jewelry and artwork [for crypto](https://decentralizedboutique.com/?page_id=150) (including DCR).
+There has been an uptick in Decred-related [artwork](https://twitter.com/_Checkmatey_/status/1278972757796159489) published this month. @OfficialCryptos impressed the folk with a [Decred Dargon](https://twitter.com/OfficialCryptos/status/1273926304027508738) (which might be the [armored lizard](https://www.youtube.com/watch?v=XkvcdjSH0c0&t=50m24s) Murad talked mentioned on the podcast), [unicorn](https://twitter.com/OfficialCryptos/status/1275426618610196480) and btcsuite [drilling rig](https://twitter.com/OfficialCryptos/status/1275507751511371780). @aithzakaria1 posted a [digital city](https://twitter.com/aithzakaria1/status/1277109552857710592), a [shuttle](https://twitter.com/aithzakaria1/status/1277472194256347137) and a other images on his Twitter. @AGNFAB [announced](https://twitter.com/AGNFAB1/status/1271157067097792514) that some of his artwork will be exclusively available on [decentralizedboutique.com](https://decentralizedboutique.com/?product_cat=art), a new store selling crypto related jewelry and artwork [for crypto](https://decentralizedboutique.com/?page_id=150) (including DCR).
 
-{ who is the author of this artwork? }
-
-- https://twitter.com/aithzakaria1/status/1277021138334502914
-- https://twitter.com/aithzakaria1/status/1277109552857710592
-- https://twitter.com/aithzakaria1/status/1277409807226593282
-- https://twitter.com/aithzakaria1/status/1277472194256347137
+Decred is in the [top 15](https://twitter.com/CryptoDiffer/status/1263052913582264320) coins by LunarCRUSH proprietary score as of May 20.
 
 ## Community Discussions
 
@@ -361,6 +356,7 @@ Selected Twitter discussions:
 - @moo31337 [dropped](https://twitter.com/marco_peereboom/status/1271200577272385538) a teaser bomb about his next proposal
 - @Doctor\_Bitcoin\_ [compared](https://twitter.com/Doctor_Bitcoin_/status/1277352638502375424) Decred to a virtual continent that anyone can join
 - @Checkmate created a new [#DecredChallenge](https://twitter.com/_Checkmatey_/status/1272680543612628997) where you need to guess which metric is shown on the chart.
+- @Frenchy\_DCR [revelaed](https://twitter.com/Frenchy_DCR/status/1273811301844709387) why DCR is missing out on the adoption.
 - @Mattgetsbarrel1 figured out an ultimate [strategy](https://twitter.com/Mattgetsbarrel1/status/1274072597597024257) to trade DCR.
 
 ## Markets
@@ -375,6 +371,7 @@ In his latest [post](https://medium.com/decred/decred-on-chain-realised-cap-mvrv
 
 - testing realized cap https://twitter.com/PermabullNino/status/1268181399879790592
 - correlation between ticket inflows/outflows and price https://twitter.com/PermabullNino/status/1268270041759432704
+- 12 months of bullish RSI divergence https://twitter.com/_Checkmatey_/status/1267945637980463104
 
 ## Relevant External
 
