Comm Disc polish

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -337,26 +337,25 @@ Decred is in the [top 15](https://twitter.com/CryptoDiffer/status/12630529135822
 
 Comm systems news:
 
-- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are used as virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and fully bridged rooms #decred-101, #proposals, #support, #ticket-splitting, and #trading. { @Exitus anything to add? }
-- { new Telegram support channel https://t.me/DecredSupport bridged to Matrix #support }
-
-{selected discussed topics, as bullet list or one paragraph per topic}
+- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and two-way bridged rooms #decred-101, #proposals, #support, #ticket-splitting, and #trading.
+- A new [DecredSupport](https://t.me/DecredSupport) channel was created on Telegram and bridged to Matrix #support room.
+- Matrix devs [released](https://matrix.org/blog/2020/06/02/introducing-p-2-p-matrix/) an updated version of the peer-to-peer client prototype that allows to take more control of your data.
 
 Selected Reddit posts:
 
-Some of the most active posts this month were part of @checkmate's new Forward Thinking Friday and Skepticism Sunday initiatives
+Some of the most active posts this month were part of @Checkmate's new Forward Thinking Friday and Skepticism Sunday initiatives
 
-- Forward Thinking Friday [1](https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/) (moving the peg forward) and [2](https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/) (Decred Narratives)
-- Skepticism Sunday [1](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [2](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/)
-- The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
-- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than /r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
+- Forward Thinking Friday [Jun 18](https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/) (moving the peg forward) and [Jun 26](https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/) (Decred Narratives).
+- Skepticism Sunday [Jun 21](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [Jun 28](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/).
+- The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @Checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
+- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
 
 Selected Twitter discussions:
 
-- @moo31337 [dropped](https://twitter.com/marco_peereboom/status/1271200577272385538) a teaser bomb about his next proposal
-- @Doctor\_Bitcoin\_ [compared](https://twitter.com/Doctor_Bitcoin_/status/1277352638502375424) Decred to a virtual continent that anyone can join
+- @moo31337 [dropped](https://twitter.com/marco_peereboom/status/1271200577272385538) a teaser bomb about his next proposal.
+- @Doctor\_Bitcoin\_ [compared](https://twitter.com/Doctor_Bitcoin_/status/1277352638502375424) Decred to a virtual continent that anyone can join.
 - @Checkmate created a new [#DecredChallenge](https://twitter.com/_Checkmatey_/status/1272680543612628997) where you need to guess which metric is shown on the chart.
-- @Frenchy\_DCR [revelaed](https://twitter.com/Frenchy_DCR/status/1273811301844709387) why DCR is missing out on the adoption.
+- @Frenchy\_DCR [revelaed](https://twitter.com/Frenchy_DCR/status/1273811301844709387) DCR is not popular.
 - @Mattgetsbarrel1 figured out an ultimate [strategy](https://twitter.com/Mattgetsbarrel1/status/1274072597597024257) to trade DCR.
 
 ## Markets
