--- a/journal/202006.md
+++ b/journal/202006.md
@@ -207,6 +207,8 @@ Six proposals were voted on in June, with 4 approved and 2 rejected, with relati
 - DCR On-Chain Research: Phase 2 by @PermabullNino - 74% approval (31% turnout).
 - Decred Bug Bounty Program: Phase 3 by @degeri - 98% approval (32% turnout). Approval percentage has been going up since [phase 1](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) (90%) and [phase 2](https://proposals.decred.org/proposals/073694ed82d34b2bfff51e35220e8052ad4060899b23bc25791a9383375cae70) (94%).
 
+Although the second Latam proposal passed, it barely hit the approval threshold of 60%. To address nearly 40% No votes, @elian started a Reddit [survey](https://www.reddit.com/r/decred/comments/gzw6hl/what_are_the_thoughts_of_the_394/) calling for any feedback to learn what is missing and what can be improved.
+
 The [proposal](https://proposals.decred.org/proposals/4affceb07f5b8126366e8b73ed3d164ebc010bc6fefba19375c4c2e2b252beb0) to sponsor a book (CoinStory) for $500 was rejected with 11.6% approval and 34% turnout, while the TV marketing [proposal](https://proposals.decred.org/proposals/9eaafc20f206776e38642e272233390f351c5562c3835369a558cc7d7e341018) had 8% approval and 29% turnout.
 
 Politeia Digest [issue 32](https://blockcommons.red/politeia-digest/issue032/) has further details on all of the above.
@@ -349,6 +351,8 @@ Some of the most active posts this month were part of @Checkmate's new Forward T
 - Skepticism Sunday [Jun 21](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [Jun 28](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/).
 - The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @Checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
 - @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
+- The idea to [sponsor](https://www.reddit.com/r/decred/comments/hcfkei/draft_decred_cypherpunk_prize/) research and software that plays an important role in Decred received mixed responses, in part due to the lack of detailes and people willing to execute it.
+- u/OpenWithRuiLopez noticed that Coinbase has [acquired](https://www.reddit.com/r/decred/comments/guri3s/coinbase_acquires_tagomi_tagomi_lists_decred/) institutional crypto brokerage platform Tagomi, which trades DCR as one of its 14 assets.
 
 Selected Twitter discussions:
 
