--- a/journal/202006.md
+++ b/journal/202006.md
@@ -366,15 +366,13 @@ Selected Twitter discussions:
 
 In June DCR was trading between USD 14.01-18.76 / BTC 0.0015-0.0019. The average daily rate was $16.05.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
-
 In his latest [post](https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182) @Checkmate analyzed how realized cap, MVRV ratio and gradient oscillators apply to Decred. Realized cap tends to act as support or resistance level for both Decred and Bitcoin, but for Decred it is more accurate because coins are repriced much more often.
 
-> The Decred realised cap captures an important psychological level in that it represents the aggregate price where the market last interacted with their coins, capturing a sort of ‘recency bias’. People who regularly interact with their DCR holdings via tickets, CoinShuffle++ mixes or governance votes are likely to have heightened awareness of coin price. Therefore, the opportunity cost of realising profits or losses on their DCR is baked into each transaction. The explicit decision to buy a ticket over sending coins to an exchange for sale is a reflection of meaningfully bullish sentiment for each individual, and vice-versa.
+> The Decred realised cap captures an important psychological level in that it represents the aggregate price where the market last interacted with their coins, capturing a sort of 'recency bias'. People who regularly interact with their DCR holdings via tickets, CoinShuffle++ mixes or governance votes are likely to have heightened awareness of coin price. Therefore, the opportunity cost of realising profits or losses on their DCR is baked into each transaction. The explicit decision to buy a ticket over sending coins to an exchange for sale is a reflection of meaningfully bullish sentiment for each individual, and vice-versa.
 
-- testing realized cap https://twitter.com/PermabullNino/status/1268181399879790592
-- correlation between ticket inflows/outflows and price https://twitter.com/PermabullNino/status/1268270041759432704
-- 12 months of bullish RSI divergence https://twitter.com/_Checkmatey_/status/1267945637980463104
+Another market-related [analysis](https://twitter.com/_Checkmatey_/status/1267945637980463104) from @Checkmate noted bullish RSI divergence vs both DCR and USD and charted the price against on-chain indicators.
+
+@PermabullNino charted how DCR market cap is testing the [realized cap](https://twitter.com/PermabullNino/status/1268181399879790592) and a possible correlation between historical instances of huge ticket pool [outflows](https://twitter.com/PermabullNino/status/1268270041759432704) with market downtrends.
 
 ## Relevant External
 
