Events campus party

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -270,7 +270,7 @@ Attended:
 
 Upcoming:
 
-- { link Campus Party if releasing before 11th }
+- Jul 11 - [Campus Party](https://brasil.campus-party.org/) - Internet. Brazilian Decred community will have 3 speakers. Rafaela Romano will talk about decentralization in cryptocurrencies on the Living Better stage with the title "Monetization via Blockchain". Two other speakers will be confirmed closer to the event.
 
 ## Media
 
