Dev dcrpool release

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -109,7 +109,7 @@ The core functionality is complete and developers are in the process of thorough
 
 [dcrpool](https://github.com/decred/dcrpool):
 
-- v1.1.0 [RC2](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2) and [RC3](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc3) released fixing a few bugs since RC1
+- The v1.1 final release was [announced](https://twitter.com/dnldd/status/1280455233945194496) on Jul 7 following two release candidates that fixed issues in RC1. Check the full [release notes](https://github.com/decred/dcrpool/releases/tag/v1.1.0) for details.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
