--- a/journal/202006.md
+++ b/journal/202006.md
@@ -6,11 +6,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 June's highlights:
 
-- Decred's version of the Coinbase Rosetta software was released, this will greatly simply the process of adding DCR support for any merchants/exchanges using Rosetta
+- Decred's version of the Coinbase Rosetta software was released, this will greatly simplify the process of adding DCR support for any merchants/exchanges using Rosetta
 - Mobile apps on iOS and Android are upgraded to v1.5
 - @richardred published the first results of his on chain research, also see the Integrations section of the Journal for monitoring of Kucoin's PoS activity
 - Decred Dex seems poised for a limited initial release that supports mainnet DEXing
-- There has been an increase in discussion activity on reddit, and several new Decred-inspired artists have appeared on twitter
+- There has been an increase in discussion activity on Reddit, and several new Decred-inspired artists have appeared on twitter
 
 ## Mobile Wallets v1.5 Release
 
@@ -32,7 +32,7 @@ An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middlewa
 > 
 > For developers of new blockchain projects, the Rosetta interface makes it easier to ensure compatibility with exchanges that use Rosetta, and can dramatically speed up the time it takes exchanges to integrate with new blockchains and protect customer funds by ensuring specific security conditions are met.
 > 
-> For the broader community of crypto developers, Rosetta makes it easier to build cross-blockchain applications such as block explorers, wallets and dapps. Instead of writing custom parsing for every supported blockchain, applications can use a blockchain project's Rosetta implementation to read on-chain data and construct transactions in a standard format; minimizing code and simplifying maintenance.
+> For the broader community of crypto developers, Rosetta makes it easier to build cross-blockchain applications such as block explorers, wallets, and dapps. Instead of writing custom parsing for every supported blockchain, applications can use a blockchain project's Rosetta implementation to read on-chain data and construct transactions in a standard format; minimizing code and simplifying maintenance.
 
 Rosetta features interesting design [principles](https://www.rosetta-api.org/docs/principles_introduction.html), [no gatekeepers](https://www.rosetta-api.org/docs/no_gatekeepers.html) policy, strict security requirements for [wallet](https://www.rosetta-api.org/docs/wallet_api_introduction.html) implementations, [staking](https://www.rosetta-api.org/docs/staking_contract_support.html) support, and a [test suite](https://github.com/coinbase/rosetta-cli) to validate implementations. The first released [SDK](https://www.rosetta-api.org/docs/rosetta_sdk_go.html) is for the Go language as it is heavily [used](https://github.com/coinbase/rosetta-specifications#user-content-sdks-in-more-languages) at Coinbase.
 
@@ -93,7 +93,7 @@ In progress:
 - TOTP 2FA support
 - ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
-The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the base politeiad backend is complete. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. Next step will be to load the tlog implementation with existing mainnet data and run performance tests against it before launching. It's possible that some things might need to be reworked if any issues are discovered.
+The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the base politeiad backend is complete. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. The next step will be to load the tlog implementation with existing mainnet data and run performance tests against it before launching. It's possible that some things might need to be reworked if any issues are discovered.
 
 [vspd](https://github.com/decred/vspd):
 
@@ -215,7 +215,7 @@ Nodes: Throughout [June](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 @Checkmate posted a [chart](https://twitter.com/_Checkmatey_/status/1269825167133306881) that shows an increase in on-chain DCR volume.
 
-@PermabullNino [tweeted](https://twitter.com/PermabullNino/status/1278055245050855424) updated Mining Pulse, Difficulty Ribbons, ticket inflows and Strong Hand charts. A bit earlier he [shared](https://twitter.com/PermabullNino/status/1272512290814902275) the Staking Momentum chart.
+@PermabullNino [tweeted](https://twitter.com/PermabullNino/status/1278055245050855424) updated Mining Pulse, Difficulty Ribbons, ticket inflows, and Strong Hand charts. A bit earlier he [shared](https://twitter.com/PermabullNino/status/1272512290814902275) the Staking Momentum chart.
 
 @richardred published [part 1](https://blockcommons.red/post/dcr-on-chain-1/) in a series about analyzing Decred's blockchain data, highlights including:
 
@@ -232,7 +232,7 @@ DecredVoting VSP [announced](https://www.reddit.com/r/decred/comments/hbofz4/tir
 
 Hotbit [announced](https://hotbit.zendesk.com/hc/en-us/articles/360049302534-Hotbit-s-Announcement-Regarding-the-Launch-of-DCR-Investment-Product-and-Current-Deposit-Investment-Plan-on-June-11th-2020-UTC-8-) a Decred investment product on Jun 11, with an annualized return of 4.27% and "redemption period being (T+30)". There is a minimum purchase of 100 DCR and it seems like the "minimum unit for the calculation of interests of current deposit investment plan will be 1 DCR", whatever that means.
 
-Following Kucoin's [launch](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) of a custodial staking service in March 2020, @richardred has investigated staking activity associated with Kucoin-related addresses. Observations suggest that up until the end of Jun 2020 Kucoin has bought 213 tickets, and 185 of them have voted. The earliest tickets bought by addresses thought to be controlled by Kucoin were bought in December 2019, several months before the service was announced in Feb and customers were automatically opted in within 48 hours of that announcement. All of these tickets have abstained in the on chain agenda voting, and none of them have voted on Politeia proposals - Kucoin are not participating in decision-making with their tickets. According to reports user DCR balances appear to have earned ~0.45% additional DCR from this staking, considering about one quarter has passed this would put it on course for an annual rate of about ~1.8%, which is considerably lower than the rate which is projected for sovereign staking by [dcrdata](https://explorer.dcrdata.org/) (~6% as of writing).
+Following Kucoin's [launch](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) of a custodial staking service in March 2020, @richardred has investigated staking activity associated with Kucoin-related addresses. Observations suggest that up until the end of Jun 2020 Kucoin has bought 213 tickets, and 185 of them have voted. The earliest tickets bought by addresses thought to be controlled by Kucoin were bought in December 2019, several months before the service was announced in Feb, and customers were automatically opted in within 48 hours of that announcement. All of these tickets have abstained in the on chain agenda voting, and none of them have voted on Politeia proposals - Kucoin is not participating in decision-making with their tickets. According to reports user DCR balances appear to have earned ~0.45% additional DCR from this staking, considering about one quarter has passed this would put it on course for an annual rate of about ~1.8%, which is considerably lower than the rate which is projected for sovereign staking by [dcrdata](https://explorer.dcrdata.org/) (~6% as of writing).
 
 Payment processor [CoinPayments](https://www.coinpayments.net/) delisted 37 assets including DCR following a [warning](https://twitter.com/CoinPaymentsNET/status/1264645627750649856) in May. After some of its users [complained](https://twitter.com/CryptoEmporium_/status/1268860197038166016) about this, they tweeted that it was due to [low volume](https://twitter.com/CoinPaymentsNET/status/1268925474052268032).
 
@@ -240,7 +240,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-On Reddit @Checkmate took the lead and started focused and structured discussions to improve Decred's outreach. The first post was to explore ideas for a grassroots marketing campaign/strategy and connect with people willing to help executing it. One of the outcomes is the [#DidYouKnowDecred](https://twitter.com/hashtag/DidYouKnowDecred) hashtag campaign. That was followed by two Skepticism Sunday and two Forward Thinking Friday threads designed to analyze weaknesses and solutions to them, as well as ideas to push Decred further. In total they collected 155 comments and were some of the most active posts this month.
+On Reddit, @Checkmate took the lead and started focused and structured discussions to improve Decred's outreach. The first post was to explore ideas for a grassroots marketing campaign/strategy and connect with people willing to help execute it. One of the outcomes is the [#DidYouKnowDecred](https://twitter.com/hashtag/DidYouKnowDecred) hashtag campaign. That was followed by two Skepticism Sunday and two Forward Thinking Friday threads designed to analyze weaknesses and solutions to them, as well as ideas to push Decred further. In total, they collected 155 comments and were some of the most active posts this month.
 
 The second Latam Marketing and Events [proposal](https://proposals.decred.org/proposals/3c02b677462d6d22d61bf786798e975b38df7a203c2467429d4ec91f75ef0c40) passed, but it barely crossed the approval threshold of 60% in the last hours of voting. To address nearly 40% No votes, @elian started a Reddit [survey](https://www.reddit.com/r/decred/comments/gzw6hl/what_are_the_thoughts_of_the_394/) calling for any feedback to learn what is missing and what can be improved.
 
