--- a/journal/202006.md
+++ b/journal/202006.md
@@ -6,11 +6,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 June's highlights:
 
-- Decred's version of the Coinbase Rosetta software was released, this will greatly simplify the process of adding DCR support for any merchants/exchanges using Rosetta
-- Mobile apps on iOS and Android are upgraded to v1.5
-- @richardred published the first results of his on chain research, also see the Integrations section of the Journal for monitoring of Kucoin's PoS activity
-- Decred Dex seems poised for a limited initial release that supports mainnet DEXing
-- There has been an increase in discussion activity on Reddit, and several new Decred-inspired artists have appeared on twitter
+- Mobile apps for Android and iOS are upgraded to v1.5.
+- Decred's implementation of the new Rosetta standard by Coinbase was released, this will greatly simplify the process of adding DCR support for any merchants/exchanges using Rosetta.
+- @richardred published the first results of his on-chain research, also see the Integrations section of the Journal for monitoring of KuCoin's staking activity.
+- Decred DEX seems poised for a limited initial release that supports mainnet DEXing.
+- There has been an increase in discussion activity on Reddit, and several new Decred-inspired artists have appeared on Twitter.
 
 ## Mobile Wallets v1.5 Release
 
@@ -26,7 +26,7 @@ Please check the full Reddit [announcement](https://www.reddit.com/r/decred/comm
 
 ## Decred's Rosetta Middleware Implementation
 
-An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middleware-implementation/79) of the Rosetta API for Decred was [released](https://twitter.com/decredproject/status/1279127834137636866) in early July, just 2 weeks after Rosetta itself was [released](https://twitter.com/coinbase/status/1273269255610531841) by Coinbase:
+An [implementation](https://community.rosetta-api.org/t/decreds-rosetta-middleware-implementation/79) of the [Rosetta API](https://www.rosetta-api.org/) for Decred was [released](https://twitter.com/decredproject/status/1279127834137636866) in early July, just 2 weeks after Rosetta itself was [released](https://twitter.com/coinbase/status/1273269255610531841) by Coinbase:
 
 > Coinbase initially developed Rosetta as the middleware used to integrate blockchains into its platform securely and painlessly (...)
 > 
