--- a/journal/202006.md
+++ b/journal/202006.md
@@ -42,9 +42,9 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 [dcrd](https://github.com/decred/dcrd):
 
-- extracted [interfaces](https://github.com/decred/dcrd/pull/2211) in `rpcserver` to allow mocking and added tests for some of its handlers
+- refactored the [rpcserver](https://github.com/decred/dcrd/pull/2211) package to test it more easily
 - fixed [mempool](https://github.com/decred/dcrd/pull/2232) view construction when dealing with disapproved blocks (resolves some issues around transactions on testnet being rejected by the mempool that really shouldn't have been in certain conditions)
-- fixed edge case crashes of the RPC server with crafted JSON ([one](https://github.com/decred/dcrd/pull/2218), [another](https://github.com/decred/dcrd/pull/2221))
+- fixed [edge](https://github.com/decred/dcrd/pull/2218) [case](https://github.com/decred/dcrd/pull/2221) crashes of the RPC server with crafted JSON
 - [removed](https://github.com/decred/dcrd/pull/2222) Encrypt and Decrypt functions to discourage their use and instead recommend to use modern encryption scheme (e.g. [AEAD ciphers](https://crypto.stackexchange.com/a/27248))
 
 In progress:
@@ -83,7 +83,7 @@ In progress:
 - permanent [logout](https://github.com/decred/politeiagui/pull/1903) feature that deletes user identity and drafts from the browser, this change also removes the use of email as a storage key to have less personal data in browser's local storage
 - allow [short URLs](https://github.com/decred/politeiagui/pull/1962) on the UI
 - improved [diff viewer](https://github.com/decred/politeiagui/pull/1988) for proposal versions
-- [prevent](https://github.com/decred/politeiagui/pull/1966) comments and proposal submission when anchoring
+- [prevent](https://github.com/decred/politeiagui/pull/1966) commenting and proposal submission during the anchoring process
 - CMS: viewer for past [versions](https://github.com/decred/politeiagui/pull/1980) of an invoice
 - CMS: passthrough requests for [proposal data](https://github.com/decred/politeia/pull/1171) to avoid cross-site requests that cause security issues
 - lots of backend and UI bug fixes
@@ -93,7 +93,7 @@ In progress:
 - TOTP 2FA support
 - ability for CMS admins to review [spending](https://github.com/decred/politeiagui/pull/2032) of approved proposals
 
-The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the base politeiad backend is complete. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. The next step will be to load the tlog implementation with existing mainnet data and run performance tests against it before launching. It's possible that some things might need to be reworked if any issues are discovered.
+The [tlog implementation](https://github.com/decred/politeia/pull/1180) in the base politeiad backend is complete. Work on adding the plugins to it is ongoing. Plugin functionality includes comments, comment likes, and proposal votes. The next step will be to load the tlog implementation with existing mainnet data and run performance tests against it. It's possible that some things might need to be reworked if any issues are discovered.
 
 [vspd](https://github.com/decred/vspd):
 
@@ -109,7 +109,7 @@ The core functionality is complete and developers are in the process of thorough
 
 [dcrpool](https://github.com/decred/dcrpool):
 
-- The v1.1 final release was [announced](https://twitter.com/dnldd/status/1280455233945194496) on Jul 7 following two release candidates that fixed issues in RC1. Check the full [release notes](https://github.com/decred/dcrpool/releases/tag/v1.1.0) for details.
+- The final v1.1 release was [announced](https://twitter.com/dnldd/status/1280455233945194496) on Jul 7 following two release candidates that fixed issues in RC1. Check the full [release notes](https://github.com/decred/dcrpool/releases/tag/v1.1.0) for details.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
@@ -132,13 +132,13 @@ A total of 48 PRs from 8 contributors were [merged](https://github.com/decred/dc
 In progress:
 
 - trade [resumption](https://github.com/decred/dcrdex/pull/442) handling
-- conversion of asset backends to [plugins](https://github.com/decred/dcrdex/pull/362)
+- conversion of asset backends to Go [plugins](https://github.com/decred/dcrdex/pull/362)
 
 Addressing concerns about the project timeline, @chappjc noted:
 
-> Mainnet beta will be this summer. Dev [plan](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) is to do that by end of Q2 2020, and we are. Also, the client browser interface was barely hinted at in the dev proposal and we dramatically expanded the scope of the project to make it happen and look good. LTC and generic BTC-clone support wasn't part of the prop, but we got that done too. We also conceived a new epoch matching algorithm based on cryptographic commitments from the clients, the preimages for which are revealed at epoch close, and completely reimplemented it halfway through the project. Not easy or quick, but it's done too and it's a big improvement over the original spec. ([2020-06-01](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15910318461825cyXfI:decred.org))
+> Mainnet beta will be this summer. Dev plan is to do that by end of Q2 2020, and we are. Also, the client browser interface was barely hinted at in the dev [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) and we dramatically expanded the scope of the project to make it happen and look good. LTC and generic BTC-clone support wasn't part of the prop, but we got that done too. We also conceived a new epoch matching algorithm based on cryptographic commitments from the clients, the preimages for which are revealed at epoch close, and completely reimplemented it halfway through the project. Not easy or quick, but it's done too and it's a big improvement over the original spec. ([2020-06-01](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15910318461825cyXfI:decred.org))
 
-The team is working on the remaining UX issues and preparing for a limited mainnet deployment in a couple of weeks.
+The team is working on the remaining UX issues and preparing for a limited mainnet deployment in a few weeks.
 
 [dcrandroid](https://github.com/planetdecred/dcrandroid):
 
