--- a/journal/202006.md
+++ b/journal/202006.md
@@ -228,11 +228,11 @@ The same kind of analysis was repeated with fresh data and formatting improvemen
 
 ## Integrations
 
-DecredVoting VSP [announced](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/) a new tickets analytics dashboard which shows the VSPs users stats about their tickets, including some specific to split tickets devised by @decreddave himself which are not available elsewhere.
+DecredVoting VSP [announced](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/) a new tickets analytics dashboard which shows users' stats about their tickets, including some specific to split tickets devised by @decreddave himself which are not available elsewhere.
 
 Hotbit [announced](https://hotbit.zendesk.com/hc/en-us/articles/360049302534-Hotbit-s-Announcement-Regarding-the-Launch-of-DCR-Investment-Product-and-Current-Deposit-Investment-Plan-on-June-11th-2020-UTC-8-) a Decred investment product on Jun 11, with an annualized return of 4.27% and "redemption period being (T+30)". There is a minimum purchase of 100 DCR and it seems like the "minimum unit for the calculation of interests of current deposit investment plan will be 1 DCR", whatever that means.
 
-Following Kucoin's [launch](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) of a custodial staking service in March 2020, @richardred has investigated staking activity associated with Kucoin-related addresses. Observations suggest that up until the end of Jun 2020 Kucoin has bought 213 tickets, and 185 of them have voted. The earliest tickets bought by addresses thought to be controlled by Kucoin were bought in December 2019, several months before the service was announced in Feb, and customers were automatically opted in within 48 hours of that announcement. All of these tickets have abstained in the on chain agenda voting, and none of them have voted on Politeia proposals - Kucoin is not participating in decision-making with their tickets. According to reports user DCR balances appear to have earned ~0.45% additional DCR from this staking, considering about one quarter has passed this would put it on course for an annual rate of about ~1.8%, which is considerably lower than the rate which is projected for sovereign staking by [dcrdata](https://explorer.dcrdata.org/) (~6% as of writing).
+Following KuCoin's [launch](https://www.kucoin.com/news/en-decred-soft-staking-official-rules) of a custodial staking service in March 2020, @richardred has investigated staking activity associated with KuCoin-related addresses. Observations suggest that up until the end of Jun 2020 KuCoin has bought 213 tickets, and 185 of them have voted. The earliest tickets bought by addresses thought to be controlled by KuCoin were bought in December 2019, several months before the service was announced in Feb, and customers were automatically opted in within 48 hours of that announcement. All of these tickets have abstained in the on chain agenda voting, and none of them have voted on Politeia proposals - KuCoin is not participating in decision-making with their tickets. According to reports user DCR balances appear to have earned ~0.45% additional DCR from this staking, considering about one quarter has passed this would put it on course for an annual rate of about ~1.8%, which is considerably lower than the rate which is projected for sovereign staking by [dcrdata](https://explorer.dcrdata.org/) (~6% as of writing).
 
 Payment processor [CoinPayments](https://www.coinpayments.net/) delisted 37 assets including DCR following a [warning](https://twitter.com/CoinPaymentsNET/status/1264645627750649856) in May. After some of its users [complained](https://twitter.com/CryptoEmporium_/status/1268860197038166016) about this, they tweeted that it was due to [low volume](https://twitter.com/CoinPaymentsNET/status/1268925474052268032).
 
