Comm Disc to Rel Ext polish

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -320,16 +320,16 @@ Decred is in the [top 15](https://twitter.com/CryptoDiffer/status/12630529135822
 
 Comm systems news:
 
-- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and two-way bridged rooms #decred-101, #proposals, #support, #ticket-splitting, and #trading.
+- Decred's [Discord server](https://discord.gg/GJ2GXfz) has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and two-way bridged rooms #decred-101, #proposals, #support, #ticket-splitting, and #trading.
 - A new [DecredSupport](https://t.me/DecredSupport) channel was created on Telegram and bridged to Matrix #support room.
 - Matrix devs [released](https://matrix.org/blog/2020/06/02/introducing-p-2-p-matrix/) an updated version of the peer-to-peer client prototype that allows to take more control of your data.
 
 Selected Reddit posts:
 
+- The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) came from @Checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
 - Forward Thinking Friday [Jun 18](https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/) (moving the peg forward) and [Jun 26](https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/) (Decred narratives).
 - Skepticism Sunday [Jun 21](https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/) and [Jun 28](https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/).
-- The most discussed [post](https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/) of the month (and for some time) also came from @Checkmate, summarizing a number of grassroots marketing initiatives for discussion and to recruit participants.
-- @g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than r/decred. This provoked 32 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
+- u/g687 [posted](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/) analysis of how many times the names of a different project are mentioned by comments in a variety of subreddits, remarking that Decred was mentioned relatively little on subreddits other than r/decred. This provoked 36 comments in response, including a high scoring [one](https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/fw4u90p) from @jy-p which set out some possible reasons for a lack of mentions. It was also pointed out that the other projects included in the comparison had much larger market caps.
 - The idea to [sponsor](https://www.reddit.com/r/decred/comments/hcfkei/draft_decred_cypherpunk_prize/) research and software that plays an important role in Decred received mixed responses, in part due to the lack of detailes and people willing to execute it.
 - u/OpenWithRuiLopez noticed that Coinbase has [acquired](https://www.reddit.com/r/decred/comments/guri3s/coinbase_acquires_tagomi_tagomi_lists_decred/) institutional crypto brokerage platform Tagomi, which trades DCR as one of its 14 assets.
 
@@ -338,8 +338,8 @@ Selected Twitter discussions:
 - @moo31337 [dropped](https://twitter.com/marco_peereboom/status/1271200577272385538) a teaser bomb about his next proposal.
 - @Doctor\_Bitcoin\_ [compared](https://twitter.com/Doctor_Bitcoin_/status/1277352638502375424) Decred to a virtual continent that anyone can join.
 - @Checkmate created a new [#DecredChallenge](https://twitter.com/_Checkmatey_/status/1272680543612628997) where you need to guess which metric is shown on the chart.
-- @Frenchy\_DCR [revelaed](https://twitter.com/Frenchy_DCR/status/1273811301844709387) DCR is not popular.
-- @Mattgetsbarrel1 figured out an ultimate [strategy](https://twitter.com/Mattgetsbarrel1/status/1274072597597024257) to trade DCR.
+- @Frenchy\_DCR [revelaed](https://twitter.com/Frenchy_DCR/status/1273811301844709387) why DCR is not popular.
+- After multiple charts with technical analysis @Mattgetsbarrel1 found an ultimate [strategy](https://twitter.com/Mattgetsbarrel1/status/1274072597597024257) to trade DCR.
 
 ## Markets
 
@@ -355,7 +355,7 @@ Another market-related [analysis](https://twitter.com/_Checkmatey_/status/126794
 
 ## Relevant External
 
-There has been some controversy about a [bug](https://medium.com/blockstream/patching-the-liquid-timelock-issue-b4b2f5f9a973) with Blockstream's Liquid service whereby the "emergency backup keys" held by Blockstream were repeatedly taking custody of funds in a way that should only have happened in an emergency. The controversey is largely around how the disclosure of the bug has been handled, with James Prestwich (who discovered it) not [impressed](https://twitter.com/_prestwich/status/1277090512126660608) by the way its severity has been downplayed by Blockstream. This [comment](https://www.reddit.com/r/CryptoCurrency/comments/hhwwcb/vulnerability_discovered_in_liquid_allowing/fwdqbxc/) on r/cryptocurrency has a good timeline, including an observation that the story was not being covered on r/bitcoin.
+There has been some controversy about a [bug](https://medium.com/blockstream/patching-the-liquid-timelock-issue-b4b2f5f9a973) with Blockstream's Liquid service whereby the "emergency backup keys" held by Blockstream were repeatedly taking custody of funds in a way that should only have happened in an emergency. The controversy is largely around how the disclosure of the bug has been handled, with James Prestwich (who discovered it) not [impressed](https://twitter.com/_prestwich/status/1277090512126660608) by the way its severity has been downplayed by Blockstream. This [comment](https://www.reddit.com/r/CryptoCurrency/comments/hhwwcb/vulnerability_discovered_in_liquid_allowing/fwdqbxc/) on r/cryptocurrency has a good timeline, including an observation that the story was not being covered on r/bitcoin.
 
 Reddit have opened a [call](https://www.reddit.com/r/ethereum/comments/hbjx25/the_great_reddit_scaling_bakeoff/) for ideas about how they might scale the recently launched points system (currently running on Ethereum's Rinkeby testnet) to the whole platform.
 
@@ -363,9 +363,9 @@ The cost of transactions on Ethereum has [increased by 500%](https://www.coindes
 
 One Ethereum user has been paying [particularly](https://www.coindesk.com/whale-sent-130-ether-transaction-fee) high fees this month, with two separate transactions each paying $2.6 million worth of ETH as a transaction fee to miners, for a transfer of a small amount of ETH (~$100). Speculation about the cause of the high fees included mistakes and [blackmail](https://twitter.com/VitalikButerin/status/1271463564440678401) attempts. Adding to the mystery, the pool which mined one of the transactions appeared to [offer](https://twitter.com/sparkpool_eth/status/1270688700968480768) to return some of the fee, but nobody came forward. 
 
-USDT supply has [surpassed](https://bitcoinexchangeguide.com/tether-usdt-surpasses-10-billion-in-market-capitalization/) $10 billion, up from ~$5 billion this year.
-
 A [bug](https://cointelegraph.com/news/bancors-bug-exposes-dangerously-common-practice-in-ethereum-defi) with the Bancor smart contracts was detected which would have allowed attackers to drain the funds of anyone who interacted with it, so "Bancor acted preemptively to 'steal' user funds before malicious parties could intervene". The severity of the problem was compounded by the use of "infinite approvals", which save on transaction fees and offer a better UX, but expose users to much more risk (in this case the potential attacker could get all of the depositor's tokens, not just the amount they chose to deposit). Use of infinite approvals is common to many DeFi apps.
+
+USDT supply has [surpassed](https://bitcoinexchangeguide.com/tether-usdt-surpasses-10-billion-in-market-capitalization/) $10 billion, up from ~$5 billion this year.
 
 [CoinGecko](https://www.coingecko.com/) partnered with Hacken to add [cybersecurity](https://cointelegraph.com/news/coingecko-adds-crypto-exchanges-cybersecurity-ratings-to-trust-score) ratings for exchanges listed on the site (see Trust Score tab).
 
