--- a/journal/202007.md
+++ b/journal/202007.md
@@ -64,7 +64,7 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 {interviews about people}
 
-Community stats:
+Community stats as of {}:
 
 - Politeia users: {} (+{})
 - Twitter followers: {} (+{})
@@ -113,6 +113,9 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 ## Integrations
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+
+
+- Binance is about to launch a staking service similar to Kucoin for their Decred users. https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
 
@@ -170,7 +173,7 @@ Audio:
 
 Comm systems news:
 
-- {}
+- { Most Matrix rooms were upgraded to v5 }
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
